--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,10 @@
     <string name="few_step">Few steps to start App</string>
     <string name="contacts">Contacts</string>
     <string name="phone">Phone</string>
-
+    <string name="select_operator">Select your Operator</string>
+    <string name="press_button_load_contacts">Press Button to load Contacts</string>
+    <string name="load_contacts">Load Contacts</string>
+    <string name="settings">Settings</string>
 
 
     <string-array name="operator_array">
