--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,9 @@
     <string name="instruction_2" >Swap to Right to Khaliha Alia Service</string>
     <string name="instruction_3" > Press phone icon to call person</string>
     <string name="instruction">Instructions</string>
+    <string name="stc">STC</string>
+    <string name="mobily">Mobily</string>
+    <string name="zain">Zain</string>
 
 
 </resources>
