--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">اتصل</string>
+    <string name="app_name">أتصل بي</string>
     <string name="action_search">ابحث</string>
-    <string name="action_reset">اعادة الضبط</string>
+    <string name="action_reset">إعادة تعيين الإعدادات</string>
     <string name="title_activity_load_contacts">اعدادات</string>
 
 
@@ -16,8 +16,8 @@
     <string name="error">اذا ستمر هذا الرساله رجا حذف التطبيق و التواصل  مع المطور</string>
     <string name="success">تم تحميل الأسماء بنجاح</string>
     <string name="no_contacts_found">لا توجد اسماء. رجا اذهب الى تطبيق الهاتف وانشئ</string>
-    <string name="no_Operate_selected">رجاء اعاده ضبط التطبيق وختيار مزود الخدمة </string>
-    <string name="load_data_faild">رجاء اعاده ضبط التطبيق و ضغط ع تحميل السماء</string>
+    <string name="no_Operate_selected">رجاء إعادة تعيين الإعدادات و أختيار مزود الخدمة </string>
+    <string name="load_data_faild">رجاء إعادة تعيين الإعدادات و أختيار تحميل الأسماء</string>
     <string name="permission">صلاحيات</string>
     <string name="ok">تم</string>
     <string name="hi">هلا</string>
@@ -25,9 +25,9 @@
     <string name="contacts">الأسماء</string>
     <string name="phone">الهاتف</string>
     <string name="select_operator">أختر مزود الخدمة</string>
-    <string name="press_button_load_contacts">اضعط ع زر تحميل الأسماء</string>
+    <string name="press_button_load_contacts">نقر ع زر تحميل الأسماء</string>
     <string name="load_contacts">تحميل الأسماء</string>
-    <string name="settings">اعدادات</string>
+    <string name="settings">إعدادات</string>
 
 
     <string-array name="operator_array">
@@ -38,8 +38,8 @@
 
     <!-- Instructions -->
     <string name="instruction_1" >اسحب لـجهة اليمين الأرسال رساله اتصل بي</string>
-    <string name="instruction_2" >اسحب لجهة اليسار خليها علي</string>
-    <string name="instruction_3" >ضغط ايقونة الهاتف الأتصال</string>
+    <string name="instruction_2" >اسحب لجهة اليسار لـخدمة خليها علي</string>
+    <string name="instruction_3" >نقر على ايقونة الهاتف لـ الأتصال</string>
     <string name="instruction">تعليمات</string>
     <string name="stc">اتصالات</string>
     <string name="mobily">موبايلي</string>
