Update person Image

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -44,5 +44,7 @@
     <string name="stc">اتصالات</string>
     <string name="mobily">موبايلي</string>
     <string name="zain">زين</string>
+    <string name="licence">الحقوق</string>
+
 
 </resources>
