--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="stc">STC</string>
     <string name="mobily">Mobily</string>
     <string name="zain">Zain</string>
+    <string name="licence">Licence</string>
 
 
 </resources>
